Fix target word highlight on iOS

--- a/web/manifold2/src/App.css
+++ b/web/manifold2/src/App.css
@@ -71,6 +71,7 @@
 
 .App-quiz-fragment-text {
   font-size: 2em;
+  padding: 2px 0; /* trying to address iOS bug with box-shadow on em getting clipped */
 }
 
 .App-quiz-fragment-text em {
